# webdatascraper

./: README.md  app.py  latest_scrape.json  pyproject.toml  requirements.txt  scraper.py  tests.py  utils.py
attached_assets/: Pasted--status-TER-latitude-43-519065856933594-neighborhoods-C-1736779848140.txt  Pasted-import-requests-import-json-from-datetime-import-datetime-timedelta-import-time-import-logging-from-1736779450319.txt  clients.csv
cache/: 20250113_20250106.json
