[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.59.6",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "streamlit>=1.41.1",
    "trafilatura>=2.0.0",
    "urllib3>=2.3.0",
]
